Add webpack-dev-server configurations to project

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -113,5 +113,6 @@ block main
   p Written with love by #{author}
   p This will be safe: !{theGreat}
 
+  p Test 2
   script
     include script.js
