--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -113,6 +113,42 @@ block main
   p Written with love by #{author}
   p This will be safe: !{theGreat}
 
-  p Test 2
-  script
-    include script.js
+  mixin list
+    ul
+      li foo
+      li bar
+      li baz
+
+  +list
+  +list
+
+  mixin pet(name)
+    li.pet= name
+
+  ul
+    +pet('cat')
+    +pet('dog')
+    +pet('pig')
+
+  mixin article(title)
+    .article
+      .article-wrapper
+        h1= title
+        if block
+          block
+        else
+          p No content provided
+
+  +article('Hello world')
+
+  +article('Hello world')
+    p This is my
+    p Amazing article
+
+  .test-div
+
+  mixin link(href, name)
+    //- attributes == {class: "btn"}
+    a(class!=attributes.class href=href)= name
+
+  +link('/foo', 'foo')(class="TREDF")
